--- a/styles/style.css
+++ b/styles/style.css
@@ -388,10 +388,19 @@ MObile View query
         height: 300px;
         margin-top: 100px;
     }
+    
+        
+        
     .feature{
+        margin: 30px 30px;
+        align-items: flex-start;
         flex-direction: column-reverse;
-        padding-left: 0px;
+        padding-left: 20px;
         margin-top: -10px;
+    }
+    .feature-txt{display: block;
+        width: 300px;
+        padding-left: 10px;
     }
     .feature-subtitle{
         padding-top: 20px;
